src/test/deca/context/valid/created/testIfThenElse/ifSimple.deca
// Description :
//    Test d'une condition "if"
//
// Résultats :
//    ok

{
    int x = 1;
    if(x == 1){
        println(x);
    }
}

